Kubernetes/Manifest-appl/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
    name: 3-tier
    labels:
        app: Dev
