Kubernetes/Manifest-appl/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: three-ingress
  namespace: three-tier

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: three-service
                port:
                  number: 80
